deploy/k8s/base/event-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devboard-event-frontend
  namespace: devboard
  labels:
    app: devboard-event-frontend-v1
spec:
  selector:
    app: devboard-event-frontend-v1
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
